--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -52,7 +52,7 @@
                     <div class="row center">
                         &nbsp;
                         {% for tag_obj in post.tags.all %}
-                            <a href="#"><div class="chip hoverable z-depth-1">&nbsp;&nbsp;{{ tag_obj.name }}&nbsp;&nbsp;</div></a>
+                            <a><div class="chip hoverable z-depth-1">&nbsp;&nbsp;{{ tag_obj.name }}&nbsp;&nbsp;</div></a>
                         {% endfor %}
                     </div>
                     <div class="row">
