--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -20,8 +20,8 @@
         <div class="nav-content container">
             <ul class="tabs tabs-transparent">
                 <li class="tab"><a target="_blank" href="/">首页</a></li>
-                <li class="tab"><a target="_blank" href="#">归档</a></li>
-                <li class="tab"><a href="/about" class="active">关于</a></li>
+                <li class="tab"><a target="_blank" href="/archive">归档</a></li>
+                <li class="tab"><a class="active">关于</a></li>
             </ul>
         </div>
     </nav>
