--- a/templates/main/archive.html
+++ b/templates/main/archive.html
@@ -21,7 +21,7 @@
 
             <ul class="tabs tabs-transparent">
                 <li class="tab"><a target="_blank" href="/">首页</a></li>
-                <li class="tab"><a href="#" class="active">归档</a></li>
+                <li class="tab"><a class="active">归档</a></li>
                 <li class="tab"><a target="_blank" href="/about">关于</a></li>
             </ul>
         </div>
