--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -20,8 +20,8 @@
         <div class="nav-content container">
 
             <ul class="tabs tabs-transparent">
-                <li class="tab"><a href="/" class="active">首页</a></li>
-                <li class="tab"><a target="_blank" href="#">归档</a></li>
+                <li class="tab"><a class="active">首页</a></li>
+                <li class="tab"><a target="_blank" href="/archive">归档</a></li>
                 <li class="tab"><a target="_blank" href="/about">关于</a></li>
             </ul>
         </div>
