压缩图片，提高访问效率，节省流量

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -30,7 +30,7 @@
 
 {% block parallax %}
     <div class="parallax-container">
-        <div class="parallax"><img src="{% static 'main/img/hd/index_bg.jpg' %}"></div>
+        <div class="parallax"><img src="{% static 'main/img/index_bg.jpg' %}"></div>
         <div class="center white-text">
             <br><br><br><br><br><br><br>
             <h2>一生想做烂漫 Coder</h2>
