--- a/templates/base.html
+++ b/templates/base.html
@@ -88,6 +88,9 @@
     <!--Materialize-->
     <script src="{% static 'main/lib/materialize/js/materialize.min.js' %}"></script>
 
+    <!--百度自动推送工具-->
+    <script src="{% static 'main/lib/baidu/auto-submit.js' %}"></script>
+
     {# 额外js块 #}
     {% block additional-js %}
     {% endblock %}
