--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
         </div>
         <div class="footer-copyright">
             <div class="container">@ 2017 Copyright kindemh.cn<br>
-                Frontend Framework By <a href="http://materializecss.com/about.html" class="white-text">Materialize</a></div>
+                Frontend Framework By <a href="http://materializecss.com/about.html" class="white-text">MaterializeCSS</a></div>
         </div>
     </footer>
 
