--- a/templates/base.html
+++ b/templates/base.html
@@ -65,9 +65,8 @@
                 <div class="col s12 m12 l4 xl4">
                     <h5>More</h5>
                     <ul>
-                        <li><a href="#" class="white-text">GitHub&nbsp;-&nbsp;FlyAndNotDown</a></li>
+                        <li><a href="https://github.com/FlyAndNotDown" class="white-text">GitHub&nbsp;-&nbsp;FlyAndNotDown</a></li>
                         <li><a href="https://www.zhihu.com/people/wang-yu-zhi-ku-66/activities" class="white-text">知乎&nbsp;-&nbsp;亡与栀枯</a></li>
-                        <li><a href="https://user.qzone.qq.com/461425614/infocenter" class="white-text">QZone&nbsp;-&nbsp;可见影子</a></li>
                     </ul>
                 </div>
                 <div class="col s12 m12 l4 xl4">
