--- a/main/static/main/css/post.css
+++ b/main/static/main/css/post.css
@@ -2,27 +2,27 @@
     padding-right: 20px;
 }
 
-h1 {
+.section h1 {
     font-size: 50px;
 }
 
-h2 {
+.section h2 {
     font-size: 40px;
 }
 
-h3 {
+.section h3 {
     font-size: 30px;
 }
 
-h4, h5, h6 {
+.section h4, .section h5, .section h6 {
     font-size: 25px;
 }
 
-p, a, li {
+.section p, .section a, .section li {
     font-size: 20px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+.section h1, .section h2, .section h3, .section h4, .section h5, .section h6 {
     font-weight: bold;
 }
 
