--- a/main/static/main/css/post.css
+++ b/main/static/main/css/post.css
@@ -3,18 +3,18 @@
 }
 
 .section h1 {
-    font-size: 50px;
+    font-size: 45px;
 }
 
-.section h2 {
-    font-size: 40px;
+.section .main h1 {
+    font-size: 35px;
 }
 
-.section h3 {
+.section .main h2 {
     font-size: 30px;
 }
 
-.section h4, .section h5, .section h6 {
+.section .main h3, .section .main h4, .section .main h5, .section .main h6 {
     font-size: 25px;
 }
 
@@ -22,10 +22,25 @@
     font-size: 20px;
 }
 
-.section h1, .section h2, .section h3, .section h4, .section h5, .section h6 {
+.section h1, .section h2, .section h3 {
     font-weight: bold;
 }
 
 body {
     font-family: "Microsoft YaHei UI Light", monospace;
+}
+
+.section .codehilite pre {
+    font-family: Consolas, "Courier New", monospace;
+    font-size: 18px;
+}
+
+.section ul li {
+    list-style: disc inside;
+    padding-left: 15px;
+}
+
+.section ol li {
+    list-style: decimal outside;
+    padding-left: 0;
 }
