--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -9,7 +9,7 @@
 {% block navbar %}
     <nav class="nav-extended cyan">
         <div class="nav-wrapper container">
-            <a href="#" class="brand-logo center">Kindem</a>
+            <a href="#" class="brand-logo center">文章</a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="#"><i class="material-icons">search</i></a></li>
                 <li><a href="#"><i class="material-icons hide-on-med-and-down">person</i></a></li>
