搞定GitHub登录，优化链接显示

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                     <ul>
                         <li><a href="https://github.com/FlyAndNotDown" class="white-text">GitHub&nbsp;-&nbsp;FlyAndNotDown</a></li>
                         <li><a href="https://www.zhihu.com/people/wang-yu-zhi-ku-66/activities" class="white-text">知乎&nbsp;-&nbsp;亡与栀枯</a></li>
-                        <li><a href="https://www.jianshu.com/users/d498ebae7b21/timeline">简书-Kindem</a></li>
+                        <li><a href="https://www.jianshu.com/users/d498ebae7b21/timeline" class="white-text">简书-Kindem</a></li>
                     </ul>
                 </div>
                 <div class="col s12 m12 l4 xl4">
