--- a/templates/main/archive.html
+++ b/templates/main/archive.html
@@ -11,10 +11,10 @@
             <a href="#" class="brand-logo">Kindem</a>
             <ul class="right">
                 <li><a href="#"><i class="material-icons">search</i></a></li>
-                <li><a href="#"><i class="material-icons hide-on-med-and-down">person</i></a></li>
+                <li><a href="/message"><i class="material-icons hide-on-med-and-down">person</i></a></li>
             </ul>
             <ul class="left hide-on-large-only">
-                <li><a href="#"><i class="material-icons">person</i></a></li>
+                <li><a href="/message"><i class="material-icons">person</i></a></li>
             </ul>
         </div>
         <div class="nav-content container">
