--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -10,11 +10,11 @@
         <div class="nav-wrapper container">
             <a href="/" class="brand-logo">Kindem</a>
             <ul class="right">
-                <li class="hide-on-med-and-down"><a href="#"><i class="material-icons">person</i></a></li>
+                <li class="hide-on-med-and-down"><a href="/message"><i class="material-icons">person</i></a></li>
                 <li><a href="#"><i class="material-icons">search</i></a></li>
             </ul>
             <ul class="left hide-on-large-only">
-                <li><a href="#"><i class="material-icons">person</i></a></li>
+                <li><a href="/message"><i class="material-icons">person</i></a></li>
             </ul>
         </div>
         <div class="nav-content container">
