--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -10,7 +10,7 @@
     <nav class="nav-extended cyan">
         <div class="nav-wrapper container">
             <ul class="right hide-on-med-and-down">
-                <li><a href="#"><i class="material-icons hide-on-med-and-down">person</i></a></li>
+                <li><a href="/message"><i class="material-icons hide-on-med-and-down">person</i></a></li>
                 <li><a href="#"><i class="material-icons">search</i></a></li>
             </ul>
             <ul class="left">
