优化字体显示

--- a/main/static/main/css/message.css
+++ b/main/static/main/css/message.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Consolas, "Courier New", "Microsoft YaHei UI Light", monospace;
+    font-family: "Microsoft YaHei UI Light", monospace;
 }
 
 .section {
