--- a/main/static/main/css/about.css
+++ b/main/static/main/css/about.css
@@ -3,5 +3,5 @@
 }
 
 body {
-    font-family: Consolas, "Courier New", "Microsoft YaHei UI Light", monospace;
+    font-family: "Microsoft YaHei UI Light", monospace;
 }
