--- a/main/static/main/css/index.css
+++ b/main/static/main/css/index.css
@@ -3,5 +3,6 @@
 }
 
 body {
-    font-family: Consolas, "Courier New", "Microsoft YaHei UI Light", monospace;
+    font-family: "Microsoft YaHei UI Light", monospace;
+    font-weight: 100;
 }
