--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -10,8 +10,8 @@
         <div class="nav-wrapper container">
             <a href="/" class="brand-logo">Kindem</a>
             <ul class="right">
-                <li class="hide-on-med-and-down"><a href="/message"><i class="material-icons">person</i></a></li>
                 <li><a href="#"><i class="material-icons">search</i></a></li>
+                <li class="hide-on-med-and-down"><a href="/message"><i class="material-icons">person</i></a></li>
             </ul>
             <ul class="left hide-on-large-only">
                 <li><a href="/message"><i class="material-icons">person</i></a></li>
@@ -21,8 +21,8 @@
 
             <ul class="tabs tabs-transparent">
                 <li class="tab"><a class="active">首页</a></li>
-                <li class="tab"><a target="_blank" href="/archive">归档</a></li>
-                <li class="tab"><a target="_blank" href="/about">关于</a></li>
+                <li class="tab"><a target="_self" href="/archive">归档</a></li>
+                <li class="tab"><a target="_self" href="/about">关于</a></li>
             </ul>
         </div>
     </nav>
