--- a/templates/base.html
+++ b/templates/base.html
@@ -58,27 +58,23 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 m12 l4 xl4">
-                    <h4>Contact Me With</h4>
+                    <h4>联系方式</h4>
                     <p>QQ: 461425614<br>邮箱: 461425614@qq.com</p>
                     <br>
                 </div>
                 <div class="col s12 m12 l4 xl4">
-                    <h5>More</h5>
+                    <h5>了解更多</h5>
                     <ul>
                         <li><a href="https://github.com/FlyAndNotDown" class="white-text">GitHub&nbsp;-&nbsp;FlyAndNotDown</a></li>
                         <li><a href="https://www.zhihu.com/people/wang-yu-zhi-ku-66/activities" class="white-text">知乎&nbsp;-&nbsp;亡与栀枯</a></li>
                         <li><a href="https://www.jianshu.com/users/d498ebae7b21/timeline" class="white-text">简书 - Kindem</a></li>
                     </ul>
                 </div>
-                <div class="col s12 m12 l4 xl4">
-                    <h5>Donate</h5>
-                    <button type="button" class="btn cyan lighten-2 waves-effect donate-modal-trigger">请我喝一杯咖啡</button>
-                </div>
             </div>
         </div>
         <div class="footer-copyright">
             <div class="container">@ 2017 Copyright kindemh.cn<br>
-                Frontend Framework By <a href="http://materializecss.com/about.html" class="white-text">MaterializeCSS</a></div>
+                自豪采用前端框架 <a href="http://materializecss.com/about.html" class="white-text">MaterializeCSS</a></div>
         </div>
     </footer>
 
