--- a/templates/main/archive.html
+++ b/templates/main/archive.html
@@ -8,7 +8,7 @@
 {% block navbar %}
     <nav class="nav-extended cyan">
         <div class="nav-wrapper container">
-            <a href="#" class="brand-logo">Kindem</a>
+            <a href="/" class="brand-logo">Kindem</a>
             <ul class="right">
                 <li><a href="#"><i class="material-icons">search</i></a></li>
                 <li><a href="/message"><i class="material-icons hide-on-med-and-down">person</i></a></li>
@@ -20,9 +20,9 @@
         <div class="nav-content container">
 
             <ul class="tabs tabs-transparent">
-                <li class="tab"><a target="_blank" href="/">首页</a></li>
+                <li class="tab"><a target="_self" href="/">首页</a></li>
                 <li class="tab"><a class="active">归档</a></li>
-                <li class="tab"><a target="_blank" href="/about">关于</a></li>
+                <li class="tab"><a target="_self" href="/about">关于</a></li>
             </ul>
         </div>
     </nav>
