添加RSS订阅功能

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,18 +63,19 @@
                     <br>
                 </div>
                 <div class="col s12 m12 l4 xl4">
-                    <h5>了解更多</h5>
+                    <h4>了解更多</h4>
                     <ul>
                         <li><a href="https://github.com/FlyAndNotDown" class="white-text">GitHub&nbsp;-&nbsp;FlyAndNotDown</a></li>
                         <li><a href="https://www.zhihu.com/people/wang-yu-zhi-ku-66/activities" class="white-text">知乎&nbsp;-&nbsp;亡与栀枯</a></li>
                         <li><a href="https://www.jianshu.com/users/d498ebae7b21/timeline" class="white-text">简书 - Kindem</a></li>
+                        <li><a href="/rss" class="white-text">RSS订阅</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="footer-copyright">
             <div class="container">@ 2017 Copyright kindemh.cn<br>
-                自豪采用前端框架 <a href="http://materializecss.com/about.html" class="white-text">MaterializeCSS</a></div>
+                Frontend Framework By <a href="http://materializecss.com/about.html" class="white-text">MaterializeCSS</a></div>
         </div>
     </footer>
 
