--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -73,9 +73,11 @@
                         <div class="col s12 m12 l12 xl12">
                             <!--赞赏-->
                             <div class="row">
-                                <a class="btn cyan lighten-3">¥ 觉得文章有帮助?请随意打赏</a>
-                                <br>
-                                <br>
+                                <div class="col s12 m12 l12 xl12">
+                                    <a class="btn cyan lighten-3">¥ 觉得文章有帮助?请随意打赏</a>
+                                    <br>
+                                    <br>
+                                </div>
                             </div>
                             <div class="divider"></div>
                             <br>
@@ -83,30 +85,39 @@
                             {% if login_state %}
                                 <!--发表评论-->
                                 <div class="row">
-                                    <div class="chip">
-                                        <img src="{{ avatar }}">
-                                        {{ nickname }}({{ user_type }})
+                                    <div class="col s12 m12 l12 xl12">
+                                        <div class="chip">
+                                            <img src="{{ avatar }}">
+                                            {{ nickname }}({{ user_type }})
+                                        </div>
+                                        <br>
+                                        <br>
+                                        <div class="input-field">
+                                            <i class="material-icons prefix">mode_edit</i>
+                                            <textarea class="materialize-textarea" id="comment-input" data-length="500"></textarea>
+                                            <label for="comment-input">发表你的评论</label>
+                                        </div>
                                     </div>
-                                    <br>
-                                    <br>
-                                    <div class="input-field">
-                                        <i class="material-icons prefix">mode_edit</i>
-                                        <textarea class="materialize-textarea" id="comment-input" data-length="500"></textarea>
-                                        <label for="comment-input">发表你的评论</label>
-                                    </div>
+
                                 </div>
-                                <div class="divider"></div>
                             {% else %}
                                 <!--登录-->
                                 <div class="row">
-                                    <a class="btn cyan lighten-3 disabled">请登录后参与评论:</a>
-                                    <a class="btn cyan lighten-3" href="{{ github_login_link }}">GitHub</a>
+                                    <div class="col s12 m12 l12 xl12">
+                                        <h5>请登录后参与评论:</h5>
+                                        <a class="btn cyan lighten-3" href="{{ github_login_link }}">GitHub</a>
+                                        <a class="btn cyan lighten-3 disabled">QQ</a>
+                                        <a class="btn cyan lighten-3 disabled">微信</a>
+                                        <a class="btn cyan lighten-3 disabled">新浪微博</a>
+                                    </div>
                                 </div>
+                                <br>
                             {% endif %}
+                            <div class="divider"></div>
                             <!--所有评论-->
                             <div class="row">
                                 <div class="col s12 m12 l12 xl12">
-
+                                    <!--TODO-->
                                 </div>
                             </div>
                         </div>
