--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -94,7 +94,7 @@
                                         <br>
                                         <div class="input-field">
                                             <i class="material-icons prefix">mode_edit</i>
-                                            <textarea class="materialize-textarea" id="comment-input" data-length="500"></textarea>
+                                            <textarea class="materialize-textarea" id="comment-input"></textarea>
                                             <label for="comment-input">发表你的评论</label>
                                             <a class="btn green lighten-3 right disabled">发表(评论功能暂时关闭)</a>
                                         </div>
