--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -74,7 +74,7 @@
                             <!--赞赏-->
                             <div class="row">
                                 <div class="col s12 m12 l12 xl12">
-                                    <a class="btn cyan lighten-3">¥ 觉得文章有帮助?请随意打赏</a>
+                                    <a class="btn cyan lighten-3 disabled">¥ 有帮助?请随意打赏</a>
                                     <br>
                                     <br>
                                 </div>
