--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -74,21 +74,22 @@
                             <!--赞赏-->
                             <div class="row">
                                 <div class="col s12 m12 l12 xl12">
-                                    <a class="btn cyan lighten-3 disabled">¥ 有帮助?请随意打赏</a>
-                                    <br>
-                                    <br>
+                                    <div class="row">
+                                        <a class="btn cyan lighten-3 disabled center">¥ 赞赏支持</a>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="divider"></div>
                             <br>
                             <!--发表评论以及登录-->
                             {% if login_state %}
                                 <!--发表评论-->
                                 <div class="row">
                                     <div class="col s12 m12 l12 xl12">
-                                        <div class="chip">
-                                            <img src="{{ avatar }}">
-                                            {{ nickname }}({{ user_type }})
+                                        <div class="row">
+                                            <div class="chip">
+                                                <img src="{{ avatar }}">
+                                                {{ nickname }}
+                                            </div>
                                         </div>
                                         <br>
                                         <br>
@@ -105,20 +106,119 @@
                                 <!--登录-->
                                 <div class="row">
                                     <div class="col s12 m12 l12 xl12">
-                                        <h5>请登录后参与评论:</h5>
-                                        <a class="btn cyan lighten-3" href="{{ github_login_link }}">GitHub</a>
-                                        <a class="btn cyan lighten-3 disabled">QQ</a>
-                                        <a class="btn cyan lighten-3 disabled">微信</a>
-                                        <a class="btn cyan lighten-3 disabled">新浪微博</a>
+                                        <div class="row">
+                                            <h5>请登录后参与评论:</h5>
+                                        </div>
+                                        <div class="row hide-on-med-and-down">
+                                            <a class="btn cyan lighten-3" href="{{ github_login_link }}">GitHub</a>
+                                            <a class="btn cyan lighten-3 disabled">QQ</a>
+                                            <a class="btn cyan lighten-3 disabled">微信</a>
+                                            <a class="btn cyan lighten-3 disabled">新浪微博</a>
+                                        </div>
+                                        <div class="row hide-on-large-only">
+                                            <a class="btn cyan lighten-3" href="{{ github_login_link }}">GitHub</a>
+                                            <a class="btn cyan lighten-3 disabled">QQ</a>
+                                        </div>
+                                        <div class="row hide-on-large-only">
+                                            <a class="btn cyan lighten-3 disabled">微信</a>
+                                            <a class="btn cyan lighten-3 disabled">新浪微博</a>
+                                        </div>
                                     </div>
                                 </div>
                                 <br>
                             {% endif %}
-                            <div class="divider"></div>
                             <!--所有评论-->
                             <div class="row">
+                                <br>
                                 <div class="col s12 m12 l12 xl12">
-                                    <!--TODO-->
+                                    <!--评论量-->
+                                    <div class="row">
+                                        <h5>{{ comments_num }}条评论</h5>
+                                        <div class="divider"></div>
+                                    </div>
+
+                                    {% for comment in comments %}
+                                        <!--一条评论-->
+                                        <div class="row">
+                                            <div class="col s12 m12 l12 xl12">
+                                                <br>
+                                                <!--头像和评论时间-->
+                                                <div class="row">
+                                                    <div class="chip">
+                                                        <img src="{{ comment.parent.sender.avatar }}">
+                                                        {{ comment.parent.sender.nickname }}
+                                                    </div>
+                                                    <span class="grey-text lighten-3 right hide-on-small-only">
+                                                        {{ comment.parent.time.year }}.
+                                                        {{ comment.parent.time.month }}.
+                                                        {{ comment.parent.time.day }}&nbsp;
+                                                        {{ comment.parent.time.hour }}:
+                                                        {{ comment.parent.time.minute }}
+                                                        <a class="re-comment-link grey-text lighten-3">回复</a>
+                                                    </span>
+                                                </div>
+                                                <!--评论内容-->
+                                                <p>{{ comment.parent.context }}</p>
+                                                <!--小屏幕的评论时间和回复按钮-->
+                                                <div class="row hide-on-med-and-up">
+                                                    <span class="grey-text lighten-3">
+                                                        &nbsp;
+                                                        {{ comment.parent.time.year }}.
+                                                        {{ comment.parent.time.month }}.
+                                                        {{ comment.parent.time.day }}&nbsp;
+                                                        {{ comment.parent.time.hour }}:
+                                                        {{ comment.parent.time.minute }}
+                                                        <a class="re-comment-link grey-text lighten-3">回复</a>
+                                                    </span>
+                                                </div>
+
+                                                <!--子评论们-->
+                                                {% for child in comment.children %}
+                                                    <div class="row">
+                                                        <div class="col s10 m10 l10 xl10
+                                                            offset-s2 offset-m2 offset-l2 offset-xl2">
+                                                            <div class="row">
+                                                                <div class="divider"></div>
+                                                            </div>
+                                                            <br>
+                                                            <!--头像和评论时间-->
+                                                            <div class="row">
+                                                                <div class="chip">
+                                                                    <img src="{{ child.sender.avatar }}">
+                                                                    {{ child.sender.nickname }}
+                                                                </div>
+                                                                <span class="grey-text lighten-3 right hide-on-small-only">
+                                                                    {{ child.time.year }}.
+                                                                    {{ child.time.month }}.
+                                                                    {{ child.time.day }}&nbsp;
+                                                                    {{ child.time.hour }}:
+                                                                    {{ child.time.minute }}
+                                                                    <a class="re-comment-link grey-text lighten-3">回复</a>
+                                                                </span>
+                                                            </div>
+                                                            <!--评论内容-->
+                                                            <p>{{ child.context }}</p>
+                                                            <!--小屏幕的评论时间和回复按钮-->
+                                                            <div class="row hide-on-med-and-up">
+                                                                <span class="grey-text lighten-3">
+                                                                    &nbsp;
+                                                                    {{ child.time.year }}.
+                                                                    {{ child.time.month }}.
+                                                                    {{ child.time.day }}&nbsp;
+                                                                    {{ child.time.hour }}:
+                                                                    {{ child.time.minute }}
+                                                                    <a class="re-comment-link grey-text lighten-3">回复</a>
+                                                                </span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                {% endfor %}
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="divider"></div>
+                                        </div>
+                                    {% endfor %}
                                 </div>
                             </div>
                         </div>
