--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="{{ description }}">
     <title>{{ title }}</title>
 
     <!--Google Icon Font-->
