--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -33,7 +33,7 @@
         <div class="center white-text">
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <h3>Kindem</h3>
-            <h4>一生想做浪漫Coder</h4>
+            <h4>一位想做全栈开发者的野生程序猿</h4>
         </div>
     </div>
 {% endblock %}
