--- a/templates/main/archive.html
+++ b/templates/main/archive.html
@@ -32,8 +32,8 @@
     <div class="parallax-container">
         <div class="parallax"><img src="{% static 'main/img/index_bg.jpg' %}"></div>
         <div class="center white-text">
-            <br><br><br><br><br><br><br>
-            <h2>History is always interesting</h2>
+            <br><br><br><br><br><br>
+            <h2>历史总是有趣的</h2>
         </div>
     </div>
 {% endblock %}
