--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -32,8 +32,8 @@
     <div class="parallax-container">
         <div class="parallax"><img src="{% static 'main/img/index_bg.jpg' %}"></div>
         <div class="center white-text">
-            <br><br><br><br><br><br><br>
-            <h2>一生想做烂漫 Coder</h2>
+            <br><br><br><br><br><br>
+            <h2>专注技术的小博客</h2>
         </div>
     </div>
 {% endblock %}
