--- a/templates/base.html
+++ b/templates/base.html
@@ -40,9 +40,9 @@
             <i class="material-icons">add</i>
         </a>
         <ul>
-            <li><a class="btn-floating green"><i class="material-icons">share</i></a></li>
-            <li><a class="btn-floating yellow darken-1"><i class="material-icons">mail</i></a></li>
-            <li><a class="btn-floating blue"><i class="material-icons">bug_report</i></a></li>
+            <li><a class="btn-floating green disabled"><i class="material-icons">share</i></a></li>
+            <li><a class="btn-floating yellow darken-1 disabled"><i class="material-icons">mail</i></a></li>
+            <li><a class="btn-floating blue disabled"><i class="material-icons">bug_report</i></a></li>
         </ul>
     </div>
 
