--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -18,7 +18,6 @@
             </ul>
         </div>
         <div class="nav-content container">
-
             <ul class="tabs tabs-transparent">
                 <li class="tab"><a class="active">首页</a></li>
                 <li class="tab"><a target="_self" href="/archive">归档</a></li>
@@ -53,7 +52,7 @@
                                 </div>
                                 <div class="card-action">
                                     <a href="/post/{{ post.pk }}">全文</a>
-                                    <a href="#">分享</a>
+                                    <!--<a href="#">分享</a>-->
                                     <span class="right">{{ post.created_time }}</span>
                                 </div>
                             </div>
@@ -68,7 +67,7 @@
                                 </div>
                                 <div class="card-action">
                                     <a href="/post/{{ post.pk }}">全文</a>
-                                    <a href="#">分享</a>
+                                    <!--<a href="#">分享</a>-->
                                     <span class="right">{{ post.created_time }}</span>
                                 </div>
                             </div>
