SEO优化-图片方面

--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -29,7 +29,7 @@
 
 {% block parallax %}
     <div class="parallax-container">
-        <div class="parallax"><img src="{% static 'main/img/about_bg.png' %}"></div>
+        <div class="parallax"><img src="{% static 'main/img/about_bg.png' %}" alt="Kindem个人图片-关于Kindem-Kindem的博客"></div>
         <div class="center white-text">
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <h3>Kindem</h3>
