--- a/templates/main/archive.html
+++ b/templates/main/archive.html
@@ -30,7 +30,7 @@
 
 {% block parallax %}
     <div class="parallax-container">
-        <div class="parallax"><img src="{% static 'main/img/index_bg.jpg' %}"></div>
+        <div class="parallax"><img src="{% static 'main/img/index_bg.jpg' %}" alt="Parallax背景-归档-Kindem的博客"></div>
         <div class="center white-text">
             <br><br><br><br><br><br>
             <h2>历史总是有趣的</h2>
