--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -29,7 +29,7 @@
 
 {% block parallax %}
     <div class="parallax-container">
-        <div class="parallax"><img src="{% static 'main/img/index_bg.jpg' %}"></div>
+        <div class="parallax"><img src="{% static 'main/img/index_bg.jpg' %}" alt="Parallax背景-Kindem的博客"></div>
         <div class="center white-text">
             <br><br><br><br><br><br>
             <h2>专注技术的小博客</h2>
