--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -122,6 +122,7 @@
                     <div class="chip z-depth-1 hoverable">&nbsp;&nbsp;Visual Studio&nbsp;&nbsp;</div>
                     <div class="chip z-depth-1 hoverable">&nbsp;&nbsp;Visual Studio Code&nbsp;&nbsp;</div>
                     <div class="chip z-depth-1 hoverable">&nbsp;&nbsp;Unity3D&nbsp;&nbsp;</div>
+                    <div class="chip z-depth-1 hoverable">&nbsp;&nbsp;Vim&nbsp;&nbsp;</div>
                 </div>
                 &nbsp;
                 <br><br><br><br><br><br><br>
