完成QQ登录功能

--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -111,13 +111,13 @@
                                         </div>
                                         <div class="row hide-on-med-and-down">
                                             <a class="btn cyan lighten-3" href="{{ github_login_link }}">GitHub</a>
-                                            <a class="btn cyan lighten-3 disabled">QQ</a>
+                                            <a class="btn cyan lighten-3" href="{{ qq_login_link }}">QQ</a>
                                             <a class="btn cyan lighten-3 disabled">微信</a>
                                             <a class="btn cyan lighten-3 disabled">新浪微博</a>
                                         </div>
                                         <div class="row hide-on-large-only">
                                             <a class="btn cyan lighten-3" href="{{ github_login_link }}">GitHub</a>
-                                            <a class="btn cyan lighten-3 disabled">QQ</a>
+                                            <a class="btn cyan lighten-3" href="{{ qq_login_link }}">QQ</a>
                                         </div>
                                         <div class="row hide-on-large-only">
                                             <a class="btn cyan lighten-3 disabled">微信</a>
