--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="{{ description }}">
+    <meta name="keywords" content="{{ keywords }}">
     <title>{{ title }}</title>
 
     <!--Google Icon Font-->
