--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -32,7 +32,7 @@
         <div class="parallax"><img src="{% static 'main/img/about_bg.png' %}" alt="Kindem个人图片-关于Kindem-Kindem的博客"></div>
         <div class="center white-text">
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <h3>Kindem</h3>
+            <h3>站主:Kindem</h3>
             <h4>一只想做全栈开发者的野生程序猿</h4>
         </div>
     </div>
