--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -8,7 +8,7 @@
 {% block navbar %}
     <nav class="nav-extended cyan">
         <div class="nav-wrapper container">
-            <a href="/" class="brand-logo">Kindem</a>
+            <a href="/" class="brand-logo">IT小站</a>
             <ul class="right">
                 <li><a href="#"><i class="material-icons">search</i></a></li>
                 <li><a href="/message"><i class="material-icons hide-on-med-and-down">person</i></a></li>
