--- a/templates/base.html
+++ b/templates/base.html
@@ -59,18 +59,24 @@
     <footer class="page-footer cyan">
         <div class="container">
             <div class="row">
-                <div class="col s12 m12 l4 xl4">
+                <div class="col s12 m6 l4 xl4">
                     <h4>联系方式</h4>
-                    <p>QQ: 461425614<br>邮箱: 461425614@qq.com</p>
+                    <p>QQ: 461425614<br>邮箱: <a href="mailto:461425614@qq.com" class="white-text">461425614@qq.com</a></p>
                     <br>
                 </div>
-                <div class="col s12 m12 l4 xl4">
-                    <h4>了解更多</h4>
+                <div class="col s12 m6 l4 xl4">
+                    <h4>站长链接</h4>
                     <ul>
                         <li><a href="/rss" class="white-text">RSS订阅(复制该链接到你的RSS阅读器中)</a></li>
                         <li><a href="https://github.com/FlyAndNotDown" class="white-text">GitHub&nbsp;-&nbsp;FlyAndNotDown</a></li>
                         <li><a href="https://www.zhihu.com/people/wang-yu-zhi-ku-66/activities" class="white-text">知乎&nbsp;-&nbsp;亡与栀枯</a></li>
                         <li><a href="https://www.jianshu.com/users/d498ebae7b21/timeline" class="white-text">简书 - Kindem</a></li>
+                    </ul>
+                </div>
+                <div class="col s12 m6 l4 xl4">
+                    <h4>更多</h4>
+                    <ul>
+                        <li><a class="white-text" href="mailto:461425614@qq.com">交换友链</a></li>
                     </ul>
                 </div>
             </div>
