添加360自动提交功能

--- a/templates/base.html
+++ b/templates/base.html
@@ -89,12 +89,12 @@
 
     <!--jQuery-->
     <script src="{% static 'main/lib/jQuery/jquery-3.2.1.min.js' %}"></script>
-
     <!--Materialize-->
     <script src="{% static 'main/lib/materialize/js/materialize.min.js' %}"></script>
-
     <!--百度自动推送工具-->
     <script src="{% static 'main/lib/baidu/auto-submit.js' %}"></script>
+    <!--360自动推送工具-->
+    <script src="{% static 'main/lib/360/auto-submit.js' %}"></script>
 
     {# 额外js块 #}
     {% block additional-js %}
