--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
     <meta charset="UTF-8">
     <meta name="description" content="{{ description }}">
     <meta name="keywords" content="{{ keywords }}">
+
+    <meta name="sogou_site_verification" content="5I6GzRCoF8"/>
+
     <title>{{ title }}</title>
 
     <!--Google Icon Font-->
