--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -11,7 +11,7 @@
             <a href="http://www.kindemh.cn/" class="brand-logo">IT小站</a>
             <ul class="right">
                 <li><a href="#"><i class="material-icons">search</i></a></li>
-                <li><a href="http://www.kindemh.cn/message"><i class="material-icons hide-on-med-and-down">person</i></a></li>
+                <li class="hide-on-med-and-down"><a href="http://www.kindemh.cn/message"><i class="material-icons">person</i></a></li>
             </ul>
             <ul class="left hide-on-large-only">
                 <li><a href="http://www.kindemh.cn/message"><i class="material-icons">person</i></a></li>
