--- a/templates/main/archive.html
+++ b/templates/main/archive.html
@@ -11,14 +11,13 @@
             <a href="http://www.kindemh.cn/" class="brand-logo">IT小站</a>
             <ul class="right">
                 <li><a href="#"><i class="material-icons">search</i></a></li>
-                <li><a href="http://www.kindemh.cn/message"><i class="material-icons hide-on-med-and-down">person</i></a></li>
+                <li class="hide-on-med-and-down"><a href="http://www.kindemh.cn/message"><i class="material-icons">person</i></a></li>
             </ul>
             <ul class="left hide-on-large-only">
                 <li><a href="http://www.kindemh.cn/message"><i class="material-icons">person</i></a></li>
             </ul>
         </div>
         <div class="nav-content container">
-
             <ul class="tabs tabs-transparent">
                 <li class="tab"><a target="_self" href="http://www.kindemh.cn/">首页</a></li>
                 <li class="tab"><a class="active">归档</a></li>
