--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -42,8 +42,8 @@
         <div class="row">
             <div class="container">
                 <br>
-                <div class="row">
-                    <div class="col s12 m12 l6 xl6">
+                <div class="row hide-on-med-and-down">
+                    <div class="col l6 xl6">
                         {% for post in posts_left %}
                             <div class="card white">
                                 <div class="card-content">
@@ -58,8 +58,25 @@
                             </div>
                         {% endfor %}
                     </div>
-                    <div class="col s12 m12 l6 xl6">
+                    <div class="col l6 xl6">
                         {% for post in posts_right %}
+                            <div class="card white">
+                                <div class="card-content">
+                                    <span class="card-title">{{ post.title }}</span>
+                                    <p>{{ post.excerpt }}</p>
+                                </div>
+                                <div class="card-action">
+                                    <a href="http://www.kindemh.cn/post/{{ post.pk }}">全文</a>
+                                    <!--<a href="#">分享</a>-->
+                                    <span class="right">{{ post.created_time }}</span>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="row show-on-medium-and-down">
+                    <div class="col s12 m12">
+                        {% for post in posts %}
                             <div class="card white">
                                 <div class="card-content">
                                     <span class="card-title">{{ post.title }}</span>
