--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -74,7 +74,7 @@
                         {% endfor %}
                     </div>
                 </div>
-                <div class="row show-on-medium-and-down">
+                <div class="row hide-on-large-only">
                     <div class="col s12 m12">
                         {% for post in posts %}
                             <div class="card white">
