--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -97,7 +97,7 @@
                                             <i class="material-icons prefix">mode_edit</i>
                                             <textarea class="materialize-textarea" id="comment-input"></textarea>
                                             <label for="comment-input">发表你的评论</label>
-                                            <a class="btn green lighten-3 right" id="comment-publish-btn">发表(评论功能暂时关闭)</a>
+                                            <a class="btn green lighten-3 right" id="comment-publish-btn">发表</a>
                                         </div>
                                     </div>
 
