--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -238,6 +238,8 @@
         $(document).ready(function () {
             // 为发表评论按钮添加响应
             $('#comment-publish-btn').click(function () {
+                alert('btn被点击')
+
                 var obj = {};
                 obj.sender = {{ user_pk }};
                 obj.post = {{ post.pk }};
