--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -236,9 +236,12 @@
     <script src="{% static 'main/js/post.js' %}" rel="stylesheet"></script>
     <script>
         $(document).ready(function () {
+            $.ajaxSetup({
+                data: {csrfmiddlewaretoken: '{{ csrf_token }}' },
+            });
+
             // 为发表评论按钮添加响应
             $('#comment-publish-btn').click(function () {
-                var token = $.cookie('csrftoken');
                 var obj = {};
                 obj.sender = {{ user_pk }};
                 obj.post = {{ post.pk }};
@@ -247,7 +250,6 @@
                 $.ajax({
                     url: 'http://www.kindemh.cn/publish_comment',
                     type: 'post',
-                    headers:{'X-CSRFToken': token},
                     data_type: 'json',
                     async: true,
                     data: JSON.stringify(obj),
