--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -237,7 +237,7 @@
     <script>
         $(document).ready(function () {
             $.ajaxSetup({
-                data: {csrfmiddlewaretoken: '{{ csrf_token }}' },
+                data: { csrfmiddlewaretoken: '{{ csrf_token }}' }
             });
 
             // 为发表评论按钮添加响应
